# line_follower_simulation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: control_strategy.hpp  motor_controller.hpp  robot.hpp  sensor_array.hpp
src/: control_strategy.cpp  main.cpp  motor_controller.cpp  robot.cpp  sensor_array.cpp
